tests/errors/redefine-external.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";

extern "./redefine-external.futil" { // This extern is not defined that in that file.
  primitive exp() -> ();
}

component exp() -> () {
  cells {}
  wires {}
  control {}
}

component main() -> () {
  cells {}
  wires {}
  control {}
}
